--- a/template.yml
+++ b/template.yml
@@ -24,6 +24,7 @@ Resources:
     Properties:
       Handler: index.get
       Runtime: nodejs4.3
+      Tracing: Active  # Enable X-Ray tracing for the function
       Role:
         Fn::ImportValue:
           !Join ['-', [!Ref 'ProjectId', !Ref 'AWS::Region', 'LambdaTrustRole']]
